fix(screenshare): mention device not supported on mobile
Instead of calling it a browser.

--- a/spot-client/src/common/css/_screenshare.scss
+++ b/spot-client/src/common/css/_screenshare.scss
@@ -6,6 +6,7 @@
     .screenshare-select {
         @include centered-content;
         flex-direction: column;
+        text-align: center;
         padding: 30px 40px;
         width: 100%;
 
